--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -6,7 +6,7 @@
             "hyprland/window"
         ],
         "modules-center": [
-            "custom/combined-time-weather"
+            "custom/combined-time-date"
         ],
         "modules-right": [
             "wireplumber", 
@@ -23,14 +23,14 @@
             "format": "{icon}",
             "on-click": "activate",
             "format-icons": {
-                "1": " ",
-                "2": " ",
-                "3": " ",
-                "4": " ",
-                "5": " ",
-                "urgent": " ",
-                "active": " ",
-                "default": " "
+                "1": "",
+                "2": "",
+                "3": "",
+                "4": "",
+                "5": "",
+                "urgent": "",
+                "active": "",
+                "default": ""
                 },
             "sort-by-number": true,
             "persistent-workspaces": {
@@ -54,20 +54,20 @@
 
         "memory": {
             "interval": 30,
-            "format": "{used:0.1f}G/{total:0.1f}G  "
+            "format": "{used:0.1f}G/{total:0.1f}G   "
         },
         "cpu": {
             "interval": 10,
-            "format": "{}%  ",
+            "format": "{}%   ",
             "max-length": 10
         },
 
          "network": {
-            "format-wifi" : "  up",
-            "format-ethernet": "󰈀  up",
-            "format-disconnected": "",
+            "format-wifi" : " ",
+            "format-ethernet": "󰈀 ",
+            "format-disconnected": " ",
             "tooltip-format-disconnected": "Not connected",
-            "tooltip-format-wifi": "{essid} ({signalStrength}%) ",
+            "tooltip-format-wifi": "{essid} ({signalStrength}%)  ",
             "tooltip-format-ethernet": "{ifname} 🖧   {bandwidthUpBits}  {bandwidthDownBits}"
         },
 
@@ -87,7 +87,7 @@
             "scroll-step": 1,
             "on-click": "pwvucontrol"
         },
-        "custom/combined-time-weather": {
+        "custom/combined-time-date": {
             "exec": "echo \"$(date \"+%a  %d  %b    %-I:%M %p\")\"",
             "interval": 60
         }
