used grim and swappy for screenshots

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,5 +1,10 @@
 preload = $HOME/wallpapers/space.jpg
-
+preload = $HOME/wallpapers/a.png
+preload = $HOME/wallpapers/cafe.png
+preload = $HOME/wallpapers/kikidorm.jpg
+preload = $HOME/wallpapers/leaf.jpg
+preload = $HOME/wallpapers/path.jpg
+preload = $HOME/wallpapers/sea.jpg
 preload = $HOME/wallpapers/forest.jpg
 
 # preload more
