--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,12 +1,11 @@
-
 # BACKGROUND
 background {
     monitor =
     #path = screenshot
-    path = ~/wallpapers/50434825_p0_master1200.jpg
+    path = ~/wallpapers/kikidorm.jpg
     #color = $background
     contrast = 1
-    brightness = 0.7
+    brightness = 0.4
     vibrancy = 0.2
     vibrancy_darkness = 0.2
     blur_passes = 2
