--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -8,7 +8,8 @@
             "custom/combined-time-date"
         ],
         "modules-right": [
-            "wireplumber", 
+            "wireplumber",
+            "bluetooth",
             "network",
             "memory", 
             "cpu", 
@@ -91,5 +92,13 @@
         "custom/combined-time-date": {
             "exec": "echo \"$(date \"+%a  %d  %B   %-I:%M %p\")\"",
             "interval": 60
-        }
+        },
+        "bluetooth": {
+		    "format": "󰂯",
+		    "format-disabled": "󰂲",
+		    "format-off": "󰂯",
+	    	"interval": 30,
+		    "on-click": "blueman-manager",
+		    "format-no-controller": ""
+    	},
 }
